Added SIP ports for Freeswitch

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,12 @@ services:
         ports:
             - "80:80"
             - "6001:6001"
+            - "5060:5060"
+            - "5080:5080"
+            - "5066:5066"
+            - "7443:7443"
+            - "8021:8021"
+            - "64535-65300:64535-65300/udp"
         volumes:
             - app-data:/var/lib/mysql
             - system-logs:/var/log
