Added some ports

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,8 +8,10 @@ services:
         ports:
             - "80:80"
             - "6001:6001"
-            - "5060:5060"
-            - "5080:5080"
+            - "5060:5060/udp"
+            - "5060:5060/tcp"
+            - "5080:5080/udp"
+            - "5080:5080/tcp"
             - "5066:5066"
             - "7443:7443"
             - "8021:8021"
