--- a/with-sip/docker-compose.yml
+++ b/with-sip/docker-compose.yml
@@ -181,3 +181,6 @@ volumes:
   app-data: { external: true }
   system-logs: { external: true }
   app-storage: { external: true }
+  sip-proxy-data: { }
+  sip-proxy-app: { }
+  sip-node-app: { }
