--- a/with-sip/docker-compose.yml
+++ b/with-sip/docker-compose.yml
@@ -36,7 +36,7 @@ services:
     container_name: link-redis
     restart: always
     ports:
-      - 6379:6379/tcp
+      - "6379:6379/tcp"
     networks:
       - link-internal
     depends_on:
@@ -56,9 +56,9 @@ services:
     container_name: link-nats
     restart: always
     ports:
-      - 4222:4222/tcp
-      - 6222:6222/tcp
-      - 8222:8222/tcp
+      - "4222:4222/tcp"
+      - "6222:6222/tcp"
+      - "8222:8222/tcp"
     networks:
       - link-internal
     depends_on:
@@ -73,21 +73,20 @@ services:
     container_name: link-db
     restart: always
     environment:
-      - MYSQL_ROOT_PASSWORD=puYJABqaMoXyqtJinhn6xzZb
+      - MYSQL_ROOT_PASSWORD=Qwerty12345
       - MYSQL_DATABASE=basip_link
-      - "character-set-server=utf8mb4"
-      - "collation-server=utf8mb4_unicode_ci"
     depends_on:
       - autoheal
     healthcheck:
-      test: mysql --user=root --password=puYJABqaMoXyqtJinhn6xzZb --database=basip_link --execute="select 1;" || exit 1
-      interval: 10s
+      test: mysql --user=root --password=Qwerty12345 --database=basip_link --execute="select 1;" || exit 1
+      interval: 1m
       timeout: 10s
       retries: 3
+      start_period: 1m
     volumes:
       - app-data:/var/lib/mysql
     ports:
-      - 3306:3306/tcp
+      - "3306:3306/tcp"
     networks:
       - link-internal
     logging:
@@ -95,12 +94,13 @@ services:
       options:
         max-size: "10m"
         max-file: "5"
+    command: ['--character-set-server=utf8mb4', '--collation-server=utf8mb4_unicode_ci', '--innodb-buffer-pool-size=2G', '--innodb-log-file-size=256M']
   face-app:
     image: basip/link-face-app:latest
     container_name: link-face-app
     restart: always
     ports:
-      - 8089:80/tcp
+      - "8089:80/tcp"
     networks:
       - link-internal
     logging:
@@ -155,15 +155,14 @@ services:
     environment:
       - MYSQL_ROOT_PASSWORD=2TeEcbpdTXx2HrGVHgji3iqJ
       - MYSQL_DATABASE=kamailio
-      - "character-set-server=utf8mb4"
-      - "collation-server=utf8mb4_unicode_ci"
     depends_on:
       - autoheal
     healthcheck:
       test: mysql --user=root --password=2TeEcbpdTXx2HrGVHgji3iqJ --database=kamailio --execute="select 1;" || exit 1
-      interval: 10s
+      interval: 1m
       timeout: 10s
       retries: 3
+      start_period: 1m
     volumes:
       - sip-proxy-data:/var/lib/mysql
     ports:
@@ -173,6 +172,7 @@ services:
       options:
         max-size: "10m"
         max-file: "5"
+    command: ['--innodb-buffer-pool-size=2G', '--innodb-log-file-size=256M']
 networks:
   link-internal:
     internal: true
@@ -181,6 +181,6 @@ volumes:
   app-data: { external: true }
   system-logs: { external: true }
   app-storage: { external: true }
-  sip-proxy-data: { }
-  sip-proxy-app: { }
-  sip-node-app: { }
+  sip-proxy-data: {}
+  sip-node-app: {}
+  sip-proxy-app: {}
