--- a/with-sip/with-web-proxy/docker-compose.yml
+++ b/with-sip/with-web-proxy/docker-compose.yml
@@ -4,8 +4,8 @@ services:
     image: steveltn/https-portal:1
     container_name: link-web-proxy
     ports:
-      - '80:80'
-      - '443:443'
+      - "80:80"
+      - "443:443"
     restart: always
     environment:
       STAGE: $HTTPS_MODE
@@ -43,8 +43,8 @@ services:
     container_name: link-app
     restart: always
     ports:
-      - '8000:8000/tcp'
-      - '6001:6001/tcp'
+      - "8000:8000/tcp"
+      - "6001:6001/tcp"
     depends_on:
       - autoheal
       - redis
@@ -86,9 +86,9 @@ services:
     container_name: link-nats
     restart: always
     ports:
-      - 4222:4222/tcp
-      - 6222:6222/tcp
-      - 8222:8222/tcp
+      - "4222:4222/tcp"
+      - "6222:6222/tcp"
+      - "8222:8222/tcp"
     networks:
       - link-internal
     depends_on:
@@ -103,17 +103,16 @@ services:
     container_name: link-db
     restart: always
     environment:
-      - MYSQL_ROOT_PASSWORD=puYJABqaMoXyqtJinhn6xzZb
+      - MYSQL_ROOT_PASSWORD=Qwerty12345
       - MYSQL_DATABASE=basip_link
-      - "character-set-server=utf8mb4"
-      - "collation-server=utf8mb4_unicode_ci"
     depends_on:
       - autoheal
     healthcheck:
-      test: mysql --user=root --password=puYJABqaMoXyqtJinhn6xzZb --database=basip_link --execute="select 1;" || exit 1
-      interval: 10s
+      test: mysql --user=root --password=Qwerty12345 --database=basip_link --execute="select 1;" || exit 1
+      interval: 1m
       timeout: 10s
       retries: 3
+      start_period: 1m
     volumes:
       - app-data:/var/lib/mysql
     ports:
@@ -125,12 +124,13 @@ services:
       options:
         max-size: "10m"
         max-file: "5"
+    command: ['--character-set-server=utf8mb4', '--collation-server=utf8mb4_unicode_ci', '--innodb-buffer-pool-size=2G', '--innodb-log-file-size=256M']
   face-app:
     image: basip/link-face-app:latest
     container_name: link-face-app
     restart: always
     ports:
-      - 8089:80/tcp
+      - "8089:80/tcp"
     networks:
       - link-internal
     logging:
@@ -185,15 +185,14 @@ services:
     environment:
       - MYSQL_ROOT_PASSWORD=2TeEcbpdTXx2HrGVHgji3iqJ
       - MYSQL_DATABASE=kamailio
-      - "character-set-server=utf8mb4"
-      - "collation-server=utf8mb4_unicode_ci"
     depends_on:
       - autoheal
     healthcheck:
       test: mysql --user=root --password=2TeEcbpdTXx2HrGVHgji3iqJ --database=kamailio --execute="select 1;" || exit 1
-      interval: 10s
+      interval: 1m
       timeout: 10s
       retries: 3
+      start_period: 1m
     volumes:
       - sip-proxy-data:/var/lib/mysql
     ports:
@@ -203,6 +202,7 @@ services:
       options:
         max-size: "10m"
         max-file: "5"
+    command: ['--innodb-buffer-pool-size=2G', '--innodb-log-file-size=256M']
 networks:
   link-internal:
     internal: true
