--- a/without-sip/with-web-proxy/docker-compose.yml
+++ b/without-sip/with-web-proxy/docker-compose.yml
@@ -4,8 +4,8 @@ services:
     image: steveltn/https-portal:1
     container_name: link-web-proxy
     ports:
-      - '80:80'
-      - '443:443'
+      - "80:80"
+      - "443:443"
     restart: always
     environment:
       STAGE: $HTTPS_MODE
@@ -45,8 +45,8 @@ services:
     environment:
       - SIP_ENABLED=true
     ports:
-      - '8000:8000/tcp'
-      - '6001:6001/tcp'
+      - "8000:8000/tcp"
+      - "6001:6001/tcp"
     depends_on:
       - autoheal
       - redis
@@ -68,7 +68,7 @@ services:
     container_name: link-redis
     restart: always
     ports:
-      - 6379:6379/tcp
+      - "6379:6379/tcp"
     networks:
       - link-internal
     depends_on:
@@ -88,9 +88,9 @@ services:
     container_name: link-nats
     restart: always
     ports:
-      - 4222:4222/tcp
-      - 6222:6222/tcp
-      - 8222:8222/tcp
+      - "4222:4222/tcp"
+      - "6222:6222/tcp"
+      - "8222:8222/tcp"
     networks:
       - link-internal
     depends_on:
@@ -105,21 +105,20 @@ services:
     container_name: link-db
     restart: always
     environment:
-      - MYSQL_ROOT_PASSWORD=puYJABqaMoXyqtJinhn6xzZb
+      - MYSQL_ROOT_PASSWORD=Qwerty12345
       - MYSQL_DATABASE=basip_link
-      - "character-set-server=utf8mb4"
-      - "collation-server=utf8mb4_unicode_ci"
     depends_on:
       - autoheal
     healthcheck:
-      test: mysql --user=root --password=puYJABqaMoXyqtJinhn6xzZb --database=basip_link --execute="select 1;" || exit 1
-      interval: 10s
+      test: mysql --user=root --password=Qwerty12345 --database=basip_link --execute="select 1;" || exit 1
+      interval: 1m
       timeout: 10s
       retries: 3
+      start_period: 1m
     volumes:
       - app-data:/var/lib/mysql
     ports:
-      - 3306:3306/tcp
+      - "3306:3306/tcp"
     networks:
       - link-internal
     logging:
@@ -127,12 +126,13 @@ services:
       options:
         max-size: "10m"
         max-file: "5"
+    command: ['--character-set-server=utf8mb4', '--collation-server=utf8mb4_unicode_ci', '--innodb-buffer-pool-size=2G', '--innodb-log-file-size=256M']
   face-app:
     image: basip/link-face-app:latest
     container_name: link-face-app
     restart: always
     ports:
-      - 8089:80/tcp
+      - "8089:80/tcp"
     networks:
       - link-internal
     logging:
