--- a/with-sip/docker-compose.yml
+++ b/with-sip/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '3.2'
+version: "3.2"
 services:
   autoheal:
     restart: always
@@ -13,10 +13,9 @@ services:
     container_name: link-app
     restart: always
     ports:
-      - '80:8000/tcp'
-      - '6001:6001/tcp'
+      - "80:8000/tcp"
+      - "6001:6001/tcp"
     depends_on:
-      - autoheal
       - redis
       - nats
       - db
@@ -61,8 +60,6 @@ services:
       - "8222:8222/tcp"
     networks:
       - link-internal
-    depends_on:
-      - autoheal
     logging:
       driver: json-file
       options:
@@ -75,14 +72,6 @@ services:
     environment:
       - MYSQL_ROOT_PASSWORD=Qwerty12345
       - MYSQL_DATABASE=basip_link
-    depends_on:
-      - autoheal
-    healthcheck:
-      test: mysql --user=root --password=Qwerty12345 --database=basip_link --execute="select 1;" || exit 1
-      interval: 1m
-      timeout: 10s
-      retries: 3
-      start_period: 1m
     volumes:
       - app-data:/var/lib/mysql
     ports:
@@ -94,7 +83,7 @@ services:
       options:
         max-size: "10m"
         max-file: "5"
-    command: ['--character-set-server=utf8mb4', '--collation-server=utf8mb4_unicode_ci', '--innodb-buffer-pool-size=2G', '--innodb-log-file-size=256M']
+    command: ["--character-set-server=utf8mb4", "--collation-server=utf8mb4_unicode_ci", "--innodb-buffer-pool-size=2G", "--innodb-log-file-size=256M"]
   face-app:
     image: basip/link-face-app:latest
     container_name: link-face-app
@@ -114,7 +103,6 @@ services:
     network_mode: host
     depends_on:
       - sip-proxy-db
-      - autoheal
     environment:
       - LISTEN_PORT=48080
       - DB_USER=root
@@ -156,14 +144,6 @@ services:
     environment:
       - MYSQL_ROOT_PASSWORD=2TeEcbpdTXx2HrGVHgji3iqJ
       - MYSQL_DATABASE=kamailio
-    depends_on:
-      - autoheal
-    healthcheck:
-      test: mysql --user=root --password=2TeEcbpdTXx2HrGVHgji3iqJ --database=kamailio --execute="select 1;" || exit 1
-      interval: 1m
-      timeout: 10s
-      retries: 3
-      start_period: 1m
     volumes:
       - sip-proxy-data:/var/lib/mysql
     ports:
@@ -173,7 +153,7 @@ services:
       options:
         max-size: "10m"
         max-file: "5"
-    command: ['--innodb-buffer-pool-size=2G', '--innodb-log-file-size=256M']
+    command: ["--innodb-buffer-pool-size=2G", "--innodb-log-file-size=256M"]
 networks:
   link-internal:
     internal: true
