--- a/without-sip/with-web-proxy/docker-compose.yml
+++ b/without-sip/with-web-proxy/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '3.2'
+version: "3.2"
 services:
   https-portal:
     image: steveltn/https-portal:1
@@ -10,9 +10,9 @@ services:
     environment:
       STAGE: $HTTPS_MODE
       PROXY_READ_TIMEOUT: 3600
-      DOMAINS: '$HTTPS_DOMAIN -> http://app:8000'
-      CLIENT_MAX_BODY_SIZE: '500M'
-      WEBSOCKET: 'true'
+      DOMAINS: "$HTTPS_DOMAIN -> http://app:8000"
+      CLIENT_MAX_BODY_SIZE: "500M"
+      WEBSOCKET: "true"
       WORKER_PROCESSES: 4
       WORKER_CONNECTIONS: 8192
     volumes:
@@ -44,7 +44,6 @@ services:
       - "8000:8000/tcp"
       - "6001:6001/tcp"
     depends_on:
-      - autoheal
       - redis
       - nats
       - db
@@ -89,8 +88,6 @@ services:
       - "8222:8222/tcp"
     networks:
       - link-internal
-    depends_on:
-      - autoheal
     logging:
       driver: json-file
       options:
@@ -103,14 +100,6 @@ services:
     environment:
       - MYSQL_ROOT_PASSWORD=Qwerty12345
       - MYSQL_DATABASE=basip_link
-    depends_on:
-      - autoheal
-    healthcheck:
-      test: mysql --user=root --password=Qwerty12345 --database=basip_link --execute="select 1;" || exit 1
-      interval: 1m
-      timeout: 10s
-      retries: 3
-      start_period: 1m
     volumes:
       - app-data:/var/lib/mysql
     ports:
@@ -122,7 +111,7 @@ services:
       options:
         max-size: "10m"
         max-file: "5"
-    command: ['--character-set-server=utf8mb4', '--collation-server=utf8mb4_unicode_ci', '--innodb-buffer-pool-size=2G', '--innodb-log-file-size=256M']
+    command: ["--character-set-server=utf8mb4", "--collation-server=utf8mb4_unicode_ci", "--innodb-buffer-pool-size=2G", "--innodb-log-file-size=256M"]
   face-app:
     image: basip/link-face-app:latest
     container_name: link-face-app
