feat: add link upgrading manual
features of migration from v1.2.8 to v1.2.9

--- a/with-sip/with-web-proxy/docker-compose.yml
+++ b/with-sip/with-web-proxy/docker-compose.yml
@@ -140,9 +140,11 @@ services:
       - DB_NAME=kamailio
       - KAMAILIO_CONFIG_PATH=/usr/local/etc/kamailio
       - APP_ASSETS_PATH=/root/control-service/assets
+      - ARI_CONFIG_PATH=/usr/local/etc/ari-service      
     volumes:
       - sip-proxy-app:/root/control-service/assets
       - sip-proxy-log:/var/log
+      - app-ssl-certs:/certs
     logging:
       driver: json-file
       options:
@@ -156,7 +158,6 @@ services:
     environment:
       - LISTEN_PORT=48081
       - ASTERISK_CONFIG_PATH=/etc/asterisk
-      - ARI_CONFIG_PATH=/usr/local/etc/asterisk-ari-service
       - APP_ASSETS_PATH=/root/control-service/assets
     volumes:
       - sip-node-app:/root/control-service/assets
