--- a/with-sip/with-web-proxy/docker-compose.yml
+++ b/with-sip/with-web-proxy/docker-compose.yml
@@ -37,7 +37,7 @@ services:
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
   app:
-    image: basip/link-app
+    image: basip/link-app:latest
     container_name: link-app
     restart: always
     ports:
@@ -45,7 +45,7 @@ services:
       - "6001:6001/tcp"
     depends_on:
       - redis
-      - nats
+      - broker
       - db
     networks:
       - link-internal
@@ -73,21 +73,6 @@ services:
       interval: 10s
       timeout: 10s
       retries: 3
-    logging:
-      driver: json-file
-      options:
-        max-size: "10m"
-        max-file: "5"
-  nats:
-    image: nats:2.2.6-alpine3.13
-    container_name: link-nats
-    restart: always
-    ports:
-      - "4222:4222/tcp"
-      - "6222:6222/tcp"
-      - "8222:8222/tcp"
-    networks:
-      - link-internal
     logging:
       driver: json-file
       options:
@@ -125,8 +110,28 @@ services:
       options:
         max-size: "10m"
         max-file: "5"
+  broker:
+    image: basip/link-broker:latest
+    restart: always
+    container_name: link-broker
+    ports:
+      - "61617:61617" #STOMP+SSL
+      - "8161:8161"  #UI
+      - "5672:5672"  #AMQP
+      - "61613:61613" #STOMP
+      - "1883:1883"  #MQTT
+      - "61614:61614" #WS
+      - "1884:1884"  #MQTT+SSL
+    volumes:
+      - broker-data:/opt/activemq/data
+      - broker-app:/root/control-service/assets
+    logging:
+      driver: json-file
+      options:
+        max-size: "10m"
+        max-file: "5"
   sip-proxy:
-    image: basip/link-sip-proxy
+    image: basip/link-sip-proxy:latest
     container_name: sip-proxy-app
     restart: always
     network_mode: host
@@ -141,7 +146,7 @@ services:
       - DB_NAME=kamailio
       - KAMAILIO_CONFIG_PATH=/usr/local/etc/kamailio
       - APP_ASSETS_PATH=/root/control-service/assets
-      - ARI_CONFIG_PATH=/usr/local/etc/ari-service      
+      - ARI_CONFIG_PATH=/usr/local/etc/ari-service
     volumes:
       - sip-proxy-app:/root/control-service/assets
       - sip-proxy-log:/var/log
@@ -152,7 +157,7 @@ services:
         max-size: "10m"
         max-file: "5"
   sip-node:
-    image: basip/link-sip-node
+    image: basip/link-sip-node:latest
     container_name: sip-node-app
     network_mode: host
     restart: always
@@ -193,7 +198,9 @@ volumes:
   system-logs: { external: true }
   app-storage: { external: true }
   app-ssl-certs: { external: true }
-  sip-proxy-data: { }
-  sip-proxy-app: { }
-  sip-node-app: { }
+  broker-data: { external: true }
+  sip-proxy-data: {}
+  sip-proxy-app: {}
+  sip-node-app: {}
   sip-proxy-log: {}
+  broker-app: {}
