--- a/without-sip/docker-compose.yml
+++ b/without-sip/docker-compose.yml
@@ -17,7 +17,8 @@ services:
       - "6001:6001/tcp"
     depends_on:
       - redis
-      - broker
+      - link-app-broker
+      - link-device-broker
       - db
     networks:
       - link-internal
@@ -30,6 +31,7 @@ services:
     volumes:
       - app-storage:/share/storage
       - system-logs:/var/log
+      - device-broker-log:/var/log/device-broker:ro
   redis:
     image: redis:6.2.4-alpine3.13
     container_name: link-redis
@@ -82,21 +84,33 @@ services:
       options:
         max-size: "10m"
         max-file: "5"
-  broker:
-    image: basip/link-broker:latest
+  link-app-broker:
+    image: basip/link-app-broker:latest
     restart: always
-    container_name: link-broker
+    container_name: link-app-broker
     ports:
-      - "61617:61617" #STOMP+SSL
-      - "8161:8161"  #UI
-      - "5672:5672"  #AMQP
-      - "61613:61613" #STOMP
+      - "1893:1893" #MQTT
+    networks:
+      - link-internal
+    logging:
+      driver: json-file
+      options:
+        max-size: "10m"
+        max-file: "5"
+  link-device-broker:
+    image: basip/link-device-broker:latest
+    restart: always
+    container_name: link-device-broker
+    environment:
+      - LISTEN_PORT=48083
+      - MOSQUITTO_CONFIG_PATH=/mosquitto/config
+      - APP_ASSETS_PATH=/root/control-service/assets
+    ports:
       - "1883:1883"  #MQTT
-      - "61614:61614" #WS
-      - "1884:1884"  #MQTT+SSL
+      - "8883:8893" #MQTTS
     volumes:
-      - broker-data:/opt/activemq/data
-      - broker-app:/root/control-service/assets
+      - device-broker-settings:/mosquitto/config
+      - device-broker-log:/var/log/supervisor
     logging:
       driver: json-file
       options:
@@ -110,6 +124,5 @@ volumes:
   app-data: { external: true }
   system-logs: { external: true }
   app-storage: { external: true }
-  broker-data: { external: true }
-  broker-app: { }
-
+  device-broker-log: { }
+  device-broker-settings: { }
