--- a/with-sip/docker-compose.yml
+++ b/with-sip/docker-compose.yml
@@ -32,6 +32,7 @@ services:
       - app-storage:/share/storage
       - system-logs:/var/log
       - device-broker-log:/var/log/device-broker:ro
+      - sip-proxy-log:/var/log/sip-proxy:ro
   redis:
     image: redis:6.2.4-alpine3.13
     container_name: link-redis
