--- a/with-sip/with-web-proxy/docker-compose.yml
+++ b/with-sip/with-web-proxy/docker-compose.yml
@@ -141,6 +141,7 @@ services:
       - app-ssl-certs:/certs
       - device-broker-settings:/mosquitto/config
       - device-broker-log:/var/log/supervisor
+      - device-broker-app:/root/control-service/assets
     logging:
       driver: json-file
       options:
@@ -216,6 +217,7 @@ volumes:
   app-ssl-certs: { external: true }
   device-broker-log: { }
   device-broker-settings: { }
+  device-broker-app: { }
   sip-proxy-data: {}
   sip-proxy-app: {}
   sip-node-app: {}
