--- a/without-sip/docker-compose.yml
+++ b/without-sip/docker-compose.yml
@@ -111,6 +111,7 @@ services:
     volumes:
       - device-broker-settings:/mosquitto/config
       - device-broker-log:/var/log/supervisor
+      - device-broker-app:/root/control-service/assets
     logging:
       driver: json-file
       options:
@@ -126,3 +127,4 @@ volumes:
   app-storage: { external: true }
   device-broker-log: { }
   device-broker-settings: { }
+  device-broker-app: { }
