feat: add image name to env variable IMAGE
now you can specify target image easier

--- a/with-sip/with-web-proxy/docker-compose.yml
+++ b/with-sip/with-web-proxy/docker-compose.yml
@@ -37,7 +37,7 @@ services:
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
   app:
-    image: basip/link-app:latest
+    image: basip/link-app:${IMAGE:-latest}
     container_name: link-app
     restart: always
     ports:
@@ -101,7 +101,7 @@ services:
         max-file: "5"
     command: ["--character-set-server=utf8mb4", "--collation-server=utf8mb4_unicode_ci", "--innodb-buffer-pool-size=2G", "--innodb-log-file-size=256M"]
   face-app:
-    image: basip/link-face-app:latest
+    image: basip/link-face-app:${IMAGE:-latest}
     container_name: link-face-app
     restart: always
     ports:
@@ -114,7 +114,7 @@ services:
         max-size: "10m"
         max-file: "5"
   link-app-broker:
-    image: basip/link-app-broker:latest
+    image: basip/link-app-broker:${IMAGE:-latest}
     restart: always
     container_name: link-app-broker
     ports:
@@ -127,7 +127,7 @@ services:
         max-size: "10m"
         max-file: "5"
   link-device-broker:
-    image: basip/link-device-broker:latest
+    image: basip/link-device-broker:${IMAGE:-latest}
     restart: always
     container_name: link-device-broker
     environment:
@@ -148,7 +148,7 @@ services:
         max-size: "10m"
         max-file: "5"
   sip-proxy:
-    image: basip/link-sip-proxy:latest
+    image: basip/link-sip-proxy:${IMAGE:-latest}
     container_name: sip-proxy-app
     restart: always
     network_mode: host
@@ -174,7 +174,7 @@ services:
         max-size: "10m"
         max-file: "5"
   sip-node:
-    image: basip/link-sip-node:latest
+    image: basip/link-sip-node:${IMAGE:-latest}
     container_name: sip-node-app
     network_mode: host
     restart: always
