--- a/with-sip/docker-compose.yml
+++ b/with-sip/docker-compose.yml
@@ -1,17 +1,11 @@
 version: "3.2"
 services:
-  autoheal:
-    restart: always
-    container_name: link-autoheal
-    image: willfarrell/autoheal
-    environment:
-      - AUTOHEAL_CONTAINER_LABEL=all
-    volumes:
-      - /var/run/docker.sock:/var/run/docker.sock
   app:
     image: basip/link-app:${IMAGE:-latest}
     container_name: link-app
     restart: always
+    environment:
+      - SHARED_SECRETS_PATH=/shared-secrets
     ports:
       - "80:8000/tcp"
       - "6001:6001/tcp"
@@ -33,6 +27,7 @@ services:
       - system-logs:/var/log
       - device-broker-log:/var/log/device-broker:ro
       - sip-proxy-log:/var/log/sip-proxy:ro
+      - shared-secrets:/shared-secrets
   redis:
     image: redis:6.2.4-alpine3.13
     container_name: link-redis
@@ -41,8 +36,6 @@ services:
       - "6379:6379/tcp"
     networks:
       - link-internal
-    depends_on:
-      - autoheal
     healthcheck:
       test: redis-cli -e PING || exit 1
       interval: 10s
@@ -71,7 +64,7 @@ services:
       options:
         max-size: "10m"
         max-file: "5"
-    command: ["--character-set-server=utf8mb4", "--collation-server=utf8mb4_unicode_ci", "--innodb-buffer-pool-size=2G", "--innodb-log-file-size=256M"]
+    command: [ "--character-set-server=utf8mb4", "--collation-server=utf8mb4_unicode_ci", "--innodb-buffer-pool-size=2G", "--innodb-log-file-size=256M" ]
   face-app:
     image: basip/link-face-app:${IMAGE:-latest}
     container_name: link-face-app
@@ -106,6 +99,7 @@ services:
       - LISTEN_PORT=48083
       - MOSQUITTO_CONFIG_PATH=/mosquitto/config
       - APP_ASSETS_PATH=/root/control-service/assets
+      - SHARED_SECRETS_PATH=/shared-secrets/secrets.env
     ports:
       - "1883:1883"  #MQTT
       - "8883:8893" #MQTTS
@@ -113,6 +107,7 @@ services:
       - device-broker-settings:/mosquitto/config
       - device-broker-log:/var/log/supervisor
       - device-broker-app:/root/control-service/assets
+      - shared-secrets:/shared-secrets:ro
     logging:
       driver: json-file
       options:
@@ -135,9 +130,11 @@ services:
       - KAMAILIO_CONFIG_PATH=/usr/local/etc/kamailio
       - APP_ASSETS_PATH=/root/control-service/assets
       - ARI_CONFIG_PATH=/usr/local/etc/ari-service
+      - SHARED_SECRETS_PATH=/shared-secrets/secrets.env
     volumes:
       - sip-proxy-app:/root/control-service/assets
       - sip-proxy-log:/var/log
+      - shared-secrets:/shared-secrets:ro
     logging:
       driver: json-file
       options:
@@ -152,8 +149,10 @@ services:
       - LISTEN_PORT=48081
       - ASTERISK_CONFIG_PATH=/etc/asterisk
       - APP_ASSETS_PATH=/root/control-service/assets
+      - SHARED_SECRETS_PATH=/shared-secrets/secrets.env
     volumes:
       - sip-node-app:/root/control-service/assets
+      - shared-secrets:/shared-secrets:ro
     logging:
       driver: json-file
       options:
@@ -175,7 +174,26 @@ services:
       options:
         max-size: "10m"
         max-file: "5"
-    command: ["--innodb-buffer-pool-size=2G", "--innodb-log-file-size=256M"]
+    command: [ "--innodb-buffer-pool-size=2G", "--innodb-log-file-size=256M" ]
+  fail2ban:
+    cap_add:
+      - NET_ADMIN
+      - NET_RAW
+    network_mode: host
+    image: basip/fail2ban-service:${IMAGE:-latest}
+    container_name: link-fail2ban-service
+    environment:
+      - LISTEN_PORT=48084
+      - APP_ASSETS_PATH=/root/control-service/assets
+      - KAMAILIO_ENABLED=true
+      - KAMAILIO_PORTS=5060,5061
+      - KAMAILIO_LOG_FILE=/kamailio-logs/kamailio.log
+      - SHARED_SECRETS_PATH=/shared-secrets/secrets.env
+    volumes:
+      - shared-secrets:/shared-secrets:ro
+      - sip-proxy-log:/kamailio-logs
+      - fail2ban-service-assets:/root/control-service/assets
+
 networks:
   link-internal:
     internal: true
@@ -184,10 +202,12 @@ volumes:
   app-data: { external: true }
   system-logs: { external: true }
   app-storage: { external: true }
-  sip-proxy-data: {}
-  sip-node-app: {}
-  sip-proxy-app: {}
-  sip-proxy-log: {}
+  sip-proxy-data: { }
+  sip-node-app: { }
+  sip-proxy-app: { }
+  sip-proxy-log: { }
   device-broker-log: { }
   device-broker-settings: { }
   device-broker-app: { }
+  shared-secrets: { }
+  fail2ban-service-assets: { }
