--- a/without-sip/docker-compose.yml
+++ b/without-sip/docker-compose.yml
@@ -1,17 +1,11 @@
 version: "3.2"
 services:
-  autoheal:
-    restart: always
-    container_name: link-autoheal
-    image: willfarrell/autoheal
-    environment:
-      - AUTOHEAL_CONTAINER_LABEL=all
-    volumes:
-      - /var/run/docker.sock:/var/run/docker.sock
   app:
     image: basip/link-app:${IMAGE:-latest}
     container_name: link-app
     restart: always
+    environment:
+      - SHARED_SECRETS_PATH=/shared-secrets
     ports:
       - "80:8000/tcp"
       - "6001:6001/tcp"
@@ -32,6 +26,7 @@ services:
       - app-storage:/share/storage
       - system-logs:/var/log
       - device-broker-log:/var/log/device-broker:ro
+      - shared-secrets:/shared-secrets
   redis:
     image: redis:6.2.4-alpine3.13
     container_name: link-redis
@@ -40,8 +35,6 @@ services:
       - "6379:6379/tcp"
     networks:
       - link-internal
-    depends_on:
-      - autoheal
     healthcheck:
       test: redis-cli -e PING || exit 1
       interval: 10s
@@ -105,6 +98,7 @@ services:
       - LISTEN_PORT=48083
       - MOSQUITTO_CONFIG_PATH=/mosquitto/config
       - APP_ASSETS_PATH=/root/control-service/assets
+      - SHARED_SECRETS_PATH=/shared-secrets/secrets.env
     ports:
       - "1883:1883"  #MQTT
       - "8883:8893" #MQTTS
@@ -112,6 +106,7 @@ services:
       - device-broker-settings:/mosquitto/config
       - device-broker-log:/var/log/supervisor
       - device-broker-app:/root/control-service/assets
+      - shared-secrets:/shared-secrets:ro
     logging:
       driver: json-file
       options:
@@ -128,3 +123,4 @@ volumes:
   device-broker-log: { }
   device-broker-settings: { }
   device-broker-app: { }
+  shared-secrets: { }
