--- a/without-sip/with-web-proxy/docker-compose.yml
+++ b/without-sip/with-web-proxy/docker-compose.yml
@@ -20,26 +20,17 @@ services:
       - ./web.conf/default.conf.erb:/var/lib/nginx-conf/$HTTPS_DOMAIN.conf.erb
       - ./web.conf/default.ssl.conf.erb:/var/lib/nginx-conf/$HTTPS_DOMAIN.ssl.conf.erb
       - ./web.conf/nginx.conf.erb:/var/lib/nginx-conf/nginx.conf.erb
-    networks:
-      - default
-      - link-internal
     logging:
       driver: json-file
       options:
         max-size: "10m"
         max-file: "5"
-  autoheal:
-    restart: always
-    container_name: link-autoheal
-    image: willfarrell/autoheal
-    environment:
-      - AUTOHEAL_CONTAINER_LABEL=all
-    volumes:
-      - /var/run/docker.sock:/var/run/docker.sock
   app:
     image: basip/link-app:${IMAGE:-latest}
     container_name: link-app
     restart: always
+    environment:
+      - SHARED_SECRETS_PATH=/shared-secrets
     ports:
       - "8000:8000/tcp"
       - "6001:6001/tcp"
@@ -60,6 +51,7 @@ services:
       - app-storage:/share/storage
       - system-logs:/var/log
       - device-broker-log:/var/log/device-broker:ro
+      - shared-secrets:/shared-secrets
   redis:
     image: redis:6.2.4-alpine3.13
     container_name: link-redis
@@ -68,8 +60,6 @@ services:
       - "6379:6379/tcp"
     networks:
       - link-internal
-    depends_on:
-      - autoheal
     healthcheck:
       test: redis-cli -e PING || exit 1
       interval: 10s
@@ -133,6 +123,7 @@ services:
       - LISTEN_PORT=48083
       - MOSQUITTO_CONFIG_PATH=/mosquitto/config
       - APP_ASSETS_PATH=/root/control-service/assets
+      - SHARED_SECRETS_PATH=/shared-secrets/secrets.env
     ports:
       - "1883:1883"  #MQTT
       - "8883:8893" #MQTTS
@@ -141,6 +132,7 @@ services:
       - device-broker-settings:/mosquitto/config
       - device-broker-log:/var/log/supervisor
       - device-broker-app:/root/control-service/assets
+      - shared-secrets:/shared-secrets:ro
     logging:
       driver: json-file
       options:
@@ -158,3 +150,4 @@ volumes:
   device-broker-log: { }
   device-broker-settings: { }
   device-broker-app: { }
+  shared-secrets: { }
