feat: store fail2ban service data

--- a/with-sip/docker-compose.yml
+++ b/with-sip/docker-compose.yml
@@ -193,6 +193,7 @@ services:
       - shared-secrets:/shared-secrets:ro
       - sip-proxy-log:/kamailio-logs
       - fail2ban-service-assets:/root/control-service/assets
+      - fail2ban-service-data:/var/lib/fail2ban
 
 networks:
   link-internal:
@@ -211,3 +212,4 @@ volumes:
   device-broker-app: { }
   shared-secrets: { }
   fail2ban-service-assets: { }
+  fail2ban-service-data: { }
