--- a/with-sip/with-web-proxy/docker-compose.yml
+++ b/with-sip/with-web-proxy/docker-compose.yml
@@ -220,6 +220,7 @@ services:
       - shared-secrets:/shared-secrets:ro
       - sip-proxy-log:/kamailio-logs
       - fail2ban-service-assets:/root/control-service/assets
+      - fail2ban-service-data:/var/lib/fail2ban
 
 networks:
   link-internal:
@@ -239,3 +240,4 @@ volumes:
   sip-proxy-log: { }
   shared-secrets: { }
   fail2ban-service-assets: { }
+  fail2ban-service-data: { }
