feat: add an actions tracer to the project

--- a/with-sip/with-web-proxy/docker-compose.yml
+++ b/with-sip/with-web-proxy/docker-compose.yml
@@ -217,6 +217,20 @@ services:
       - shared-secrets:/shared-secrets:ro
       - sip-proxy-log:/kamailio-logs
       - fail2ban-service-assets:/root/control-service/assets
+  trace-collector:
+    image: basip/link-log-trace-collector:${IMAGE:-latest}
+    container_name: link-log-trace-collector
+    restart: always
+    depends_on:
+      - redis
+    networks:
+      - link-internal
+      - default
+    logging:
+      driver: json-file
+      options:
+        max-size: "10m"
+        max-file: "5"
 
 networks:
   link-internal:
