--- a/without-sip/with-web-proxy/docker-compose.yml
+++ b/without-sip/with-web-proxy/docker-compose.yml
@@ -50,6 +50,8 @@ services:
     restart: always
     ports:
       - "6379:6379/tcp"
+    sysctls:
+      - net.core.somaxconn=65535
     networks:
       - link-internal
     healthcheck:
