--- a/without-sip/docker-compose.yml
+++ b/without-sip/docker-compose.yml
@@ -36,6 +36,8 @@ services:
       - "6379:6379/tcp"
     networks:
       - link-internal
+    sysctls:
+      - net.core.somaxconn=65535
     healthcheck:
       test: redis-cli -e PING || exit 1
       interval: 10s
